Add existing file

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://portal-dev4-static.smiler.com.br/bs-theme/css/smls-base-theme.min.css">
+    <link rel="stylesheet" href="https://portal-dev4-static.smiler.com.br/bs-theme/css/smls-components.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
